fixed alignment of text header

--- a/client/src/StylesFolder/QuizStyles.scss
+++ b/client/src/StylesFolder/QuizStyles.scss
@@ -472,15 +472,28 @@
     font-family: $funfont;
     font-weight: 300;
     font-size: 18px;
-    width: auto;
+    width: 225px;
     color: $purple;
     letter-spacing: -4.25px;
     text-align: left;
     margin: 20px auto 0px;
+    @media (min-width: 400px) {
+        width: 275px;
+    }
     @media (min-width: 500px) {
         font-size: 22px;
         margin: 25px auto 0px;
         letter-spacing: -5.5px;
+        width: 375px;
+    }
+    @media (min-width: 700px) {
+        width: 575px;
+    }
+    @media (min-width: 1000px) {
+        width: 675px;
+    }
+    @media (min-width: 1300px) {
+        margin-top: 50px;
     }
 }
 .randomQuote {
@@ -607,7 +620,7 @@
     }
 }
 .answerButton {
-    margin: 3px 5px;
+    margin: 5px 5px;
     padding: 10px 10px 5px;
     background-color: $yellow;
     font-family: $funfont;
@@ -757,10 +770,13 @@
     -webkit-user-select: none;
     -ms-user-select: none;
     @media (min-width: 500px) {
-        width: 400px;
+        width: 375px;
     }
     @media (min-width: 700px) {
-        width: 600px;
+        width: 575px;
+    }
+    @media (min-width: 1000px) {
+        width: 675px;
     }
     @media (min-width: 1300px) {
         margin-top: 50px;
